update changePw
